Datenbank effizienz erhöht design angepasst Bibliotheken