@@ -6,9 +6,15 @@ import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
+import org.example.ServletUtil;
 import org.example.database.MitarbeiterDAO;
 import org.example.entities.Mitarbeiter;
+import org.mindrot.jbcrypt.BCrypt;
+
 import java.io.IOException;
+import java.sql.Date;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -19,19 +25,42 @@ public class managmentServlet extends HttpServlet {
     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 
         HttpSession session = request.getSession(false);
+        Mitarbeiter mymitarbeiter = (Mitarbeiter) session.getAttribute("SessionMitarbeiter");
 
-        Mitarbeiter mitarbeiter = (Mitarbeiter) session.getAttribute("SessionMitarbeiter");
-
-        if (mitarbeiter == null || !mitarbeiter.getAdmin()) {
+        if (mymitarbeiter == null || !mymitarbeiter.getAdmin()) {
             response.sendRedirect("/dashboard");
             return;
         }
 
         List<Mitarbeiter> mitarbeiterList = MitarbeiterDAO.fetchAllMitarbeiterForTable();
 
+        //Anpassen der Daten für die Anzeige
+        for (Mitarbeiter mitarbeiter : mitarbeiterList) {
+            mitarbeiter.setVorname(ServletUtil.capitalizeFirstLetter(mitarbeiter.getVorname()));
+            mitarbeiter.setName(ServletUtil.capitalizeFirstLetter(mitarbeiter.getName()));
+
+            String formattedWochenstunden = mitarbeiter.getWochenstunden() + " h";
+
+            mitarbeiter.setWochenstundenFormatted(formattedWochenstunden);
+
+            java.sql.Date geburtsdatum = Date.valueOf(mitarbeiter.getGeburtsdatum());
+            LocalDate localDate_Geburtsdatum = geburtsdatum.toLocalDate();
+            LocalDate  localDate_Einstellungsdatum = mitarbeiter.getEinstellungsdatum();
+
+            //Formatiert das Datum in dd.MM.yyyy (z.B. 01.01.2000)
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd.MM.yyyy");
+            String formattedDate_EinstellungsDatum = localDate_Einstellungsdatum.format(formatter);
+            String formattedDate_GeburtsDatum = localDate_Geburtsdatum.format(formatter);
+
+
+            mitarbeiter.setGeburtsdatumFormatted(formattedDate_GeburtsDatum);
+            mitarbeiter.setEinstellungsdatumFormatted(formattedDate_EinstellungsDatum);
+
+        }
+
         List<Integer> usedPersonalNummer = mitarbeiterList.stream()
                 .map(Mitarbeiter::getPersonalNummer)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Integer> allPersonalNummer = IntStream.rangeClosed(1, 9999)
                 .boxed()
@@ -40,10 +69,9 @@ public class managmentServlet extends HttpServlet {
 
         allPersonalNummer.removeAll(usedPersonalNummer);
 
-
         int totalRows = mitarbeiterList.size();
 
-
+        // Für die Pagination 1.Seite 2.Seite usw.
         request.setAttribute("totalRows", totalRows);
 
         String pageParam = request.getParameter("page");
@@ -56,13 +84,45 @@ public class managmentServlet extends HttpServlet {
         int end = Math.min(begin + rowsPerPage, mitarbeiterList.size());
 
         List<Mitarbeiter> sublist = mitarbeiterList.subList(begin, end);
-        System.out.println("Test");
 
         request.setAttribute("allAvailablePersonalNummer", allPersonalNummer);
         request.setAttribute("mitarbeiterList", sublist);
 
         request.getRequestDispatcher("WEB-INF/managment.jsp").forward(request, response);
     }
+
+    protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+
+        String vorname = request.getParameter("input_edit_vorname");
+        int personalNummer = Integer.parseInt(request.getParameter("input_edit_personalnummer_hidden"));
+        String nachname = request.getParameter("input_edit_nachname");
+        String geburtsdatum = request.getParameter("input_edit_geburtsdatum");
+        String eintrittsdatum = request.getParameter("input_edit_einstellungsdatum");
+        String position = request.getParameter("input_edit_position");
+        String onetimepassword = request.getParameter("input_edit_password");
+        boolean admin = Boolean.parseBoolean(request.getParameter("input_edit_admin"));
+        int wochenstunden = Integer.parseInt(request.getParameter("input_edit_wochenstunden"));
+
+        String hashedPassword = null;
+
+        if (onetimepassword != null) {
+            hashedPassword = BCrypt.hashpw(onetimepassword, BCrypt.gensalt(12));
+            MitarbeiterDAO.deleteLoginDataAndTokens(personalNummer);
+        }
+
+        MitarbeiterDAO.updateMitarbeiter(vorname, personalNummer, nachname, geburtsdatum, eintrittsdatum, position, hashedPassword, wochenstunden, admin);
+
+        response.sendRedirect("/managment");
+    }
+
+    protected void doDelete(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        int id = Integer.parseInt(request.getParameter("id"));
+
+        MitarbeiterDAO.deleteSingleMitarbeiter(id);
+
+    }
+
+
 
 
 }
